@@ -1,7 +1,7 @@
 /*
   This file is part of the clazy static checker.
 
-  Copyright (C) 2016 Sergio Martins <smartins@kde.org>
+  Copyright (C) 2016-2017 Sergio Martins <smartins@kde.org>
 
   This library is free software; you can redistribute it and/or
   modify it under the terms of the GNU Library General Public
@@ -41,6 +41,8 @@ void ReturningDataFromTemporary::VisitStmt(clang::Stmt *stmt)
 {
     if (handleReturn(dyn_cast<ReturnStmt>(stmt)))
         return;
+
+    handleDeclStmt(dyn_cast<DeclStmt>(stmt));
 }
 
 bool ReturningDataFromTemporary::handleReturn(ReturnStmt *ret)
@@ -50,13 +52,37 @@ bool ReturningDataFromTemporary::handleReturn(ReturnStmt *ret)
 
     auto memberCall = HierarchyUtils::unpeal<CXXMemberCallExpr>(HierarchyUtils::getFirstChild(ret), HierarchyUtils::IgnoreExprWithCleanups |
                                                                 HierarchyUtils::IgnoreImplicitCasts);
-    handleMemberCall(memberCall);
+    handleMemberCall(memberCall, false);
     return true;
 }
 
-void ReturningDataFromTemporary::handleMemberCall(CXXMemberCallExpr *memberCall)
+void ReturningDataFromTemporary::handleDeclStmt(DeclStmt *declStmt)
 {
+    if (!declStmt)
+        return;
 
+    for (auto decl : declStmt->decls()) {
+        auto varDecl = dyn_cast<VarDecl>(decl);
+        if (!varDecl)
+            continue;
+
+        if (varDecl->getType().getAsString() != "const char *")
+            continue;
+
+        Expr *init = varDecl->getInit();
+        if (!init)
+            continue;
+
+        auto memberCall = HierarchyUtils::unpeal<CXXMemberCallExpr>(HierarchyUtils::getFirstChild(init), HierarchyUtils::IgnoreExprWithCleanups |
+                                                                    HierarchyUtils::IgnoreImplicitCasts);
+
+
+        handleMemberCall(memberCall, true);
+    }
+}
+
+void ReturningDataFromTemporary::handleMemberCall(CXXMemberCallExpr *memberCall, bool onlyTemporaries)
+{
     if (!memberCall)
         return;
 
@@ -65,18 +91,11 @@ void ReturningDataFromTemporary::handleMemberCall(CXXMemberCallExpr *memberCall)
         return;
     const auto methodName = method->getQualifiedNameAsString();
 
-    if (methodName == "QByteArray::data" ||
-        methodName == "QByteArray::operator const char *" ||
-        methodName == "QByteArray::constData") {
-        handleDataCall(memberCall);
-    }
-}
+    if (methodName != "QByteArray::data" &&
+        methodName != "QByteArray::operator const char *" &&
+        methodName != "QByteArray::constData")
+        return;
 
-void ReturningDataFromTemporary::handleDataCall(CXXMemberCallExpr *memberCall)
-{
-    // Handles:
-    // return myLocalByteArray.data(); // or constData()
-    // return myTemporaryByteArray().data(); // or constData()
 
     Expr *obj = memberCall->getImplicitObjectArgument();
     Stmt *t = obj;
@@ -89,9 +108,11 @@ void ReturningDataFromTemporary::handleDataCall(CXXMemberCallExpr *memberCall)
             continue;
         }
 
-        declRef = dyn_cast<DeclRefExpr>(t);
-        if (declRef)
-            break;
+        if (!onlyTemporaries) {
+            declRef = dyn_cast<DeclRefExpr>(t);
+            if (declRef)
+                break;
+        }
 
         temporaryExpr = dyn_cast<CXXBindTemporaryExpr>(t);
         if (temporaryExpr)
@@ -112,7 +133,7 @@ void ReturningDataFromTemporary::handleDataCall(CXXMemberCallExpr *memberCall)
             return;
     }
 
-    emitWarning(memberCall, "Returning data of local QByteArray");
+    emitWarning(memberCall, "Returning data of temporary QByteArray");
 }
 
 REGISTER_CHECK("returning-data-from-temporary", ReturningDataFromTemporary, CheckLevel1)
