@@ -1,13 +1,20 @@
-returning-data-from-temporary/main.cpp:31:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:37:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:55:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:78:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:89:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:90:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:91:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:92:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:97:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:103:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:104:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:105:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
-returning-data-from-temporary/main.cpp:106:12: warning: Returning data of local QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:31:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:37:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:55:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:78:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:89:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:90:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:91:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:92:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:97:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:103:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:104:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:105:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:106:12: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:127:22: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:128:22: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:129:22: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:130:22: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:131:22: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:132:22: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
+returning-data-from-temporary/main.cpp:133:23: warning: Returning data of temporary QByteArray [-Wclazy-returning-data-from-temporary]
